--- a/src/app/solution-view-component/solution-table/solution-table.component.html
+++ b/src/app/solution-view-component/solution-table/solution-table.component.html
@@ -4,7 +4,6 @@
     <tr>
       <th>Solution/Modal</th>
       <th>Vendor</th>
-      <th>Solution ID</th>
       <th>Equipment Type</th>
       <th>System Type</th>
       <th>Certificate Date</th>
@@ -16,8 +15,8 @@
     <tbody>
     <tr *ngFor="let solution of solutions">
                          <td><a routerLink="/editSolutions/{{ solution.solutionId }}">{{ solution.name }}</a></td>
-                         <td>{{solution.solutionId}}</td>
                          <td>{{ solution.vendor.name }}</td>
+                         <td>{{solution.solutionTypeName }}</td>
                          <td>{{ solution.systemTypeDTO.name }}</td>
                          <td>{{ solution.certDt }}</td>
                          <td>{{ solution.certRenewalDueDt }}</td>
