--- a/src/app/edit-vendor/edit-vendor.component.html
+++ b/src/app/edit-vendor/edit-vendor.component.html
@@ -24,7 +24,7 @@
             <div class="form-row">
                 <div class="form-group col-12">
                 <label for="vendorName"><b>Vendor Name</b></label><div class="asterisk">*</div>
-                <input type="text" class="form-control" id="vendorName" placeholder="Vendor Name" ngModel name="vendorName" value="" readonly>
+                <input type="text" class="form-control" id="vendorName" placeholder="Vendor Name" value="{{name}}" readonly>
             </div>
         </div>
         <hr />
@@ -33,41 +33,39 @@
         <div class="form-row">
             <div class="form-group col-md-6">
                 <label for="firstName">First Name</label><div class="asterisk">*</div>
-                <input type="text" class="form-control" id="firstName" placeholder="First Name" ngModel name="firstName" value="" readonly>
+                <input type="text" class="form-control" id="firstName" placeholder="First Name" value="{{firstName}}" readonly>
             </div>
             <div class="form-group col-md-6">
                 <label for="lastName">Last Name</label><div class="asterisk">*</div>
-                <input type="text" class="form-control" id="lastName" placeholder="Last Name" ngModel name="lastName" value="" readonly>
+                <input type="text" class="form-control" id="lastName" placeholder="Last Name" value="{{lastName}}" readonly>
             </div>
          </div>
          <div class="form-row">
             <div class="form-group col-md-6">
                 <label for="email">Email ID</label><div class="asterisk">*</div>
-                <input type="email" class="form-control" id="email" placeholder="Email ID" ngModel name="email" value="" readonly>
+                <input type="email" class="form-control" id="email" placeholder="Email ID" value="{{emailId}}" readonly>
             </div>
             <div class="form-group col-md-6">
                 <label for="phone">Phone Number</label><div class="asterisk">*</div>
-                <input type="text" class="form-control" id="phone" placeholder="Phone Number" ngModel name="phoneNumber" value="" readonly>
+                <input type="text" class="form-control" id="phone" placeholder="Phone Number" value="{{phoneNumber}}" readonly>
             </div>
          </div>
          <hr />
         <p><b>Address</b></p>
         <div class="form-group">
             <label for="inputAddress">Street Name</label><div class="asterisk">*</div>
-            <input type="text" class="form-control" id="inputAddress" placeholder="Street Name" ngModel name="address" value="" readonly>
+            <input type="text" class="form-control" id="inputAddress" placeholder="Street Name" value="{{address}}" readonly>
             <label for="city">City</label><div class="asterisk">*</div>
-            <input type="text" class="form-control" id="city" placeholder="City" ngModel name="city" value="" readonly>
+            <input type="text" class="form-control" id="city" placeholder="City" value="{{city}}" readonly>
         </div>
         <div class="form-row">
                 <div class="form-group col-md-6">
             <label for="inputState">State</label><div class="asterisk">*</div>
-            <select id="inputState" class="form-control" ngModel name="inputState" readonly>
-                <option selected></option>
-            </select>
+            <input type="text" class="form-control" id="inputState" placeholder="City" value="{{state}}" readonly>
         </div>
         <div class="form-group col-md-6">
             <label for="inputZip">Zip Code</label><div class="asterisk">*</div>
-            <input type="text" class="form-control" id="inputZip" ngModel name="inputZip" value="" readonly>
+            <input type="text" class="form-control" id="inputZip" value="{{zipCode}}" readonly>
         </div>
         </div>
         <div class="buttons">
