Added routing to locality

--- a/src/app/locality-component/locality-component.component.html
+++ b/src/app/locality-component/locality-component.component.html
@@ -1,3 +1,4 @@
 <app-navigation-component></app-navigation-component>
 <app-option-list></app-option-list>
-<app-locality-add-component></app-locality-add-component>
+
+<router-outlet> </router-outlet>
