--- a/src/app/locality-component/locality-tab/locality-tab.component.html
+++ b/src/app/locality-component/locality-tab/locality-tab.component.html
@@ -2,16 +2,22 @@
     <div class="head">
         <ul class="nav nav-tabs">
             <li class="nav-item">
-                <a class="nav-link disabled">Locality Details </a>
+                <a class="nav-link disabled">Information </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link hover" routerLink="/locality/option">Link</a>
+                <a class="nav-link hover" routerLink="/locality/option">Solutions</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " routerLink="/locality/option/form2">Link</a>
+                <a class="nav-link " routerLink="/locality/option/business">Business</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " routerLink="/locality/option/form2">Link</a>
+                <a class="nav-link " routerLink="/locality/option/form2">Assessment</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link " routerLink="/locality/option/form2">Audit</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link " routerLink="/locality/option/form2">Security</a>
             </li>
         </ul>
     </div>
