--- a/src/app/edit-vendor/edit-vendor.component.html
+++ b/src/app/edit-vendor/edit-vendor.component.html
@@ -1,8 +1,8 @@
 <app-navigation-component></app-navigation-component>
-<ng-template #content>
+<ng-template #content let-c="close" let-d="dismiss">
 <div class="modal-header">
   <h4 class="modal-title">Success</h4>
-  <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
+  <button type="button" class="close" aria-label="Close" (click)="d()">
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
@@ -10,39 +10,10 @@
   <p>Vendor Registered {{name}}!</p>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Close click')">Close</button>
+  <button type="button" class="btn btn-outline-dark" (click)="c()">Close</button>
 </div>
 </ng-template>
-
-
-
-
-
-
-
-
-<div class="navigate sticky-top" [ngStyle]="{'backgroundColor': getColor(), 'opacity': getOpacity()}">
-    <!--<div class="home">
-                <i class="fas fa-home home-icon icons"></i>
-                < class="fas fa-arrow-left left-icon icons"></i>
-            </div>-->
-    <div class="form-options">
-        <div class="home-back">
-            <a routerLink="/">
-                <fa class="left-icons home-icon icons" data-toggle="tooltip" data-placement="right" title="Home" data-animation="true" data-delay="0" [name]="'home'"></fa>
-            </a>
-            <a routerLink="/vendorsView">
-                <fa class="left-icons left-icon icons" data-toggle="tooltip" data-placement="right" title="Back" data-animation="true" data-delay="0" [name]="'arrow-left'"></fa>
-            </a>
-        </div>
-
-        <div class="save-edit">
-           <fa class="edit-icon icons" data-toggle="tooltip" data-placement="right" title="Save" data-animation="true" data-delay="0" [name]="'edit'"  (click)="editorGroup()"></fa>
-
-        </div>
-        <!--  <fa class="edit-icon icons" [name]="'edit'"></fa> -->
-    </div>
-</div>
+<app-edit-navigation></app-edit-navigation>
 <div class="form-div">
     <form  class="forms" [formGroup]="editVendorForm" (ngSubmit)="createVendor(editVendorForm.value)">
         <div class="page-description">
