--- a/src/app/edit-solution/edit-solution.component.css
+++ b/src/app/edit-solution/edit-solution.component.css
@@ -1,69 +1,3 @@
-.navigate{
-    margin: 15px;
-    padding: 5px;
-}
-
-.sticky-top{
-	height: 30px;
-	border-radius: 5px;
-}
-
-.form-options{
-    margin-right: 15px;
-    margin-top: -15px;
-    padding: 5px;
-}s
-
-.home-back{
-	float: left;
-}
-
-.save-edit{
-	float: right;
-}
-
-a{
-	text-decoration: none;
-}
-
-.icons{
-    vertical-align: middle;
-    font-size: 20px;
-    margin-top: -20px;
-    padding: 2px;
-    margin-left: 5px;
-}
-
-/*.left-icons{
-	float: left;
-}
-
-.icons{
-	display: inline-block;
-}*/
-
-.home-icon{
-    color: #3A539B;
-}
-
-.home-icon:hover{
-	
-}
-
-.edit-icon{
-    /*margin-left: 10px;*/
-    color: #3A539B;
-}
-
-.left-icon{
-    /*margin-left: 10px;*/
-    color: #3A539B;
-}
-
-.save-icon{
-    color: #3A539B;
-}
-
 form{
     padding: 20px;
     border-radius: 10px;
@@ -72,6 +6,11 @@ form{
     background-color: #EEEEEE;
     overflow: hidden;
 }
+
+.form-control:disabled, .form-control[readonly] {
+    background-color: #ffffff;
+}
+
 
 .page-description{
     text-align: center;
@@ -188,4 +127,70 @@ input[readonly], select[readonly] {
 .btn{
 	background-color: #3A539B;
 	border-color: #3A539B;
+}
+
+.navigate{
+    margin: 15px;
+    padding: 5px;
+}
+
+.sticky-top{
+	height: 30px;
+	border-radius: 5px;
+}
+
+.form-options{
+    margin-right: 15px;
+    margin-top: -15px;
+    padding: 5px;
+}
+
+.home-back{
+	float: left;
+}
+
+.save-edit{
+	float: right;
+}
+
+a{
+	text-decoration: none;
+}
+
+.icons{
+    vertical-align: middle;
+    font-size: 20px;
+    margin-top: -20px;
+    padding: 2px;
+    margin-left: 5px;
+}
+
+/*.left-icons{
+	float: left;
+}
+
+.icons{
+	display: inline-block;
+}*/
+
+.home-icon{
+    color: #3A539B;
+}
+
+.home-icon:hover{
+	
+}
+
+.edit-icon{
+    /*margin-left: 10px;*/
+    color: #3A539B;
+}
+
+.left-icon{
+    /*margin-left: 10px;*/
+    color: #3A539B;
+}
+
+.save-icon{
+    color: #3A539B;
 }
