--- a/src/app/edit-solution/edit-solution.component.html
+++ b/src/app/edit-solution/edit-solution.component.html
@@ -1,150 +1,171 @@
 <app-navigation-component></app-navigation-component>
+<!-- <app-edit-navigation></app-edit-navigation>
+<button type="cancel" class="cancel btn btn-primary" (click)="editorGroup()">Cancel</button> -->
+<!-- <app-edit-solution-form></app-edit-solution-form> -->
 <div class="navigate sticky-top" [ngStyle]="{'backgroundColor': getColor(), 'opacity': getOpacity()}">
-            <!--<div class="home">
+            <!-- <div class="home">
                 <i class="fas fa-home home-icon icons"></i>
                 < class="fas fa-arrow-left left-icon icons"></i>
-            </div>-->
+            </div> -->
             <div class="form-options">
                 <div class="home-back">
                 	<a routerLink="/"><fa class="left-icons home-icon icons" data-toggle="tooltip" data-placement="right" title="Home" data-animation="true" data-delay="0" [name]="'home'"></fa></a>
-                	<a routerLink="/"><fa class="left-icons left-icon icons" data-toggle="tooltip" data-placement="right" title="Back" data-animation="true" data-delay="0" [name]="'arrow-left'"></fa></a>
+                	<a href="javascript:void(0)" (click)="backClicked()"><fa class="left-icons left-icon icons" data-toggle="tooltip" data-placement="right" title="Back" data-animation="true" data-delay="0" [name]="'arrow-left'"></fa></a>
                 </div>
                 <div class="save-edit">
-                	<fa class="edit-icon icons" data-toggle="tooltip" data-placement="right" title="Save" data-animation="true" data-delay="0" [name]="'edit'"></fa>
+                	<fa class="edit-icon icons" data-toggle="tooltip" data-placement="right" title="Save" data-animation="true" data-delay="0" [name]="'edit'" (click)="editorGroup()"></fa>
                 </div>
-               <!--  <fa class="edit-icon icons" [name]="'edit'"></fa> -->
+                <!-- <fa class="edit-icon icons" [name]="'edit'"></fa> -->
             </div>
-        </div>
-      <!--   <div>{{name}}</div> -->
-<!-- <app-edit-solution-form></app-edit-solution-form> -->
-<form>
+        </div> 
+<form [formGroup]="editSolution" (ngSubmit)="createSolution(editSolution.value)">
 			<div class="page-description"><h3>Solutions</h3>
     		<hr class="after-heading" />
     		</div>
         	<div class="tip"><p class="tip-text"><fa class="light-bulb" [name]="'lightbulb-o'"></fa>Tip:</p></div>
         	<h4>General Information</h4>
-            <div class="model-solution-row form-row">
+            	<div class="model-solution-row form-row">
             	<div class="model form-group col-md-6">
             <label class="label-form" for="modelSolution"><b>Model/Solution</b></label>
-              <input type="text" class="form-control" id="modelSolution" value="{{name}}" readonly>
+              <input type="text" class="form-control" id="modelSolution" formControlName="name">
             	</div>
             	<div class="version form-group col-md-6">
             		<label class="label-form" for="version"><b>Version</b></label>
-		              <input type="text" class="form-control" id="version" value="{{versionNumber}}" readonly>
+		              <input type="text" class="form-control" id="version" formControlName="versionNumber">
             	</div>
-            	<!-- <div class="form-group col-md-6">
-		            <label class="label-form" for="systemType"><b>System Type</b></label>
-		              <select class="form-control" id="systemType" readonly>
-		                <option selected>{{data.systemTypeDTO.name}}</option>
-		                <option value="1">EVS</option>
-		                <option value="2">Two</option>
-		                <option value="3">Three</option>
-		              </select>
-            	</div>
-            	<div class="form-group col-md-6">
-            		<label class="label-form" for="equipmentType"><b>Equipment Type</b></label>
-		              <select class="form-control" id="equipmentType" value="solutionsInput.solutionTypeName" readonly>
-		                <option selected>{{data.solutionTypeName}}</option>
-		                <option value="1">Optical/Digital Scan</option>
-		                <option value="2">Two</option>
-		                <option value="3">Three</option>
-		              </select>
-            	</div>
-            	<div class="form-group col-md-6">
-            		<label class="label-form" for="vendor"><b>Vendor</b></label>
-		              <select class="form-control" id="vendor" value="solutionsInput.vendor.name" readonly>
-		                <option selected>{{data.vendor.name}}</option>
-		                <option value="1">Dominion Voting</option>
-		                <option value="2">Two</option>
-		                <option value="3">Three</option>
-		              </select>
-            		
-            	</div> -->
             </div>
-            <div class="second-row form-row">
-            	<div class="form-group col-md-6">
-            		<label class="label-form" for="systemType"><b>System Type</b></label><div class="asterisk">*</div>
-              		<input type="text" class="form-control" id="systemType" value="{{systemName}}" readonly>
+            <div class="second-row form-row" >
+    		<div class="form-group col-md-6" formGroupName="systemTypeDTO">
+            	<label class="label-form" for="systemType"><b>System Type</b></label><div class="asterisk">*</div>
+              	<input type="text" class="form-control" id="systemType" *ngIf="editSolution.disabled" formControlName="name">
+              	<select class="form-control" id="systemType" name="systemType" *ngIf="!editSolution.disabled" required>
+		           <option>Choose</option>
+		           <option *ngFor="let systemType of systemTypeDTO">
+		                {{ systemType.name }}
+
+		                </option>
+		                </select>
             	</div>
             	<div class="form-group col-md-6">
             		<label class="label-form" for="equipmentType"><b>Equipment Type</b></label><div class="asterisk">*</div>
-		              <input type="text" class="form-control" id="equipmentType" value="{{equipmentType}}" readonly>
+		              <input type="text" class="form-control" id="equipmentType" *ngIf="editSolution.disabled" formControlName="solutionTypeName"> 
+		              <select class="form-control" id="equipmentType" name="equipmentType" *ngIf="!editSolution.disabled" required>
+		              	<option>Choose</option>
+		                <option *ngFor="let solution of solutionType">
+		               
+		                {{ solution.typeName }}
+		              
+		                
+		                </option>
+		                <!-- <option>{{ solution.typeName }}</option>
+		                <option>{{ solution.typeName }}</option>
+		                <option>{{ solution.typeName }}</option>
+		                <option>{{ solution.typeName }}</option> -->
+		              </select>
             	</div>
-            	<div class="form-group col-md-6">
+            		<div class="form-group col-md-6" formGroupName="vendor">
             		<label class="label-form" for="vendor"><b>Vendor</b></label><div class="asterisk">*</div>
-		              <input type="text" class="form-control" id="vendor" value="{{vendorName}}" readonly>
-            		
+		              <input type="text" class="form-control" id="vendor" *ngIf="editSolution.disabled" formControlName="name">
+		              <select class="form-control" id="vendor" name="vendor" *ngIf="!editSolution.disabled" required>
+		           <option>Choose</option>
+		           <option *ngFor="let vendor of vendorDTO">
+		                {{ vendor.name }}
+
+		                </option>
+		                </select>
             	</div>
             </div>
             <hr />
-           <h4>Installation and Hosting</h4>
-            <div class="installation form-group col-md-6">
+           <div>
+           	<h4>Installation and Hosting</h4>
+            	 <div class="installation form-group col-md-6" formGroupName="hostingTypeDTO">
 	            <label for="hostingType"><b>Hosting Type</b></label>
-	            <input type="text" class="form-control" id="hostingType" value="{{hostingType}}" readonly>
+	            <input type="text" class="form-control" id="hostingType" *ngIf="editSolution.disabled" formControlName="name">
+	             <select class="form-control" id="hostingType" name="hostingType" *ngIf="!editSolution.disabled" required>
+		           <option>Choose</option>
+		           <option *ngFor="let hosting of hostingTypeDTO">
+		                {{ hosting.name }}
+
+		                </option>
+		                </select>
             </div>
-            <!-- <div class="installation form-group">
-            <label class="hosting-notes" for="hostingNotes"><b>Hosting Notes</b></label><div class="asterisk-inline asterisk">*</div>
-            <textarea cols="156" rows="7" id="hostingNotes" ngModel name="hostingNotes" readonly></textarea>
+            <div class="installation form-group">
+            <label class="hosting-notes" for="hostingNotes"><b>Hosting Notes</b></label>
           </div>
-            <p><b>Hosting Notes</b></p>
-            <textarea cols="100" rows="7" id="hostingNotes"></textarea> -->
+           </div>
             <hr />
-            <h4>Certification Information</h4>
+            <div>
+            	<h4>Certification Information</h4>
             <div class="certification-test form-row">
             <div class="form-group col-md-6">
                 <label for="approvedDate"><b>DoEL Approved Date</b></label>
                 <my-date-picker name="myname" readonly></my-date-picker> 
-                <!-- <input type="date" class="form-control" id="approvedDate"> -->
             </div>
             <div class="form-group col-md-6">
                 <label for="dueDate"><b>Renewal Due Date</b></label>
                 <my-date-picker name="myname"></my-date-picker> 
-                <!-- <input type="date" class="form-control" id="dueDate"> -->
             </div>
          </div>
+            </div>
          <hr />
-          <h4>Voting System Test Laboratory - VSTL</h4>
-          <div class="certification-test form-group col-md-6">
+          <div>
+          	<h4>Voting System Test Laboratory - VSTL</h4>
+          	<div class="certification-test form-group col-md-6" formGroupName="labVendorsDTO">
             <label for="label-form labVendor"><b>Lab Vendor</b></label>
-            <input type="text" class="form-control" id="labVendor" value="{{labVendor}}" readonly>
+            <input type="text" class="form-control" id="labVendor" *ngIf="editSolution.disabled" formControlName="name">
+            <select class="form-control" id="labVendor" name="labVendor" *ngIf="!editSolution.disabled" required>
+		           <option>Choose</option>
+		           <option *ngFor="let lab of labVendorDTO">
+		                {{ lab.name }}
+
+		                </option>
+		                </select>
           </div>
           <div class="contact">
           	<div class="certification-test form-row">
             <div class="form-group col-md-6">
                 <label for="firstName"><b>First Name</b></label>
-                <input type="text" class="form-control" id="firstName" value="{{firstName}}" readonly>
+                <input type="text" class="form-control" id="firstName">
             </div>
             <div class="form-group col-md-6">
                 <label for="lastName"><b>Last Name</b></label>
-                <input type="text" class="form-control" id="lastName" value="{{lastName}}" readonly>
+                <input type="text" class="form-control" id="lastName">
             </div>
             <div class="form-group col-md-6">
                 <label for="email"><b>Email Id</b></label>
-                <input type="email" class="form-control" id="email" value="{{emailId}}" readonly>
+                <input type="email" class="form-control" id="email">
             </div>
             <div class="form-group col-md-6">
                 <label for="phone"><b>Phone Number</b></label>
-                <input type="text" class="form-control" id="phone" value="{{phoneNumber}}" readonly>
+                <input type="text" class="form-control" id="phone">
             </div>
          </div>
-          <!-- <div class="certification-test form-row">
-            <div class="form-group col-md-6">
-                <label for="email"><b>Email Id</b></label><div class="asterisk">*</div>
-                <input type="email" class="asterisk form-control" id="email" required>
-            </div>
-            <div class="form-group col-md-6">
-                <label for="phone"><b>Phone Number</b></label><div class="asterisk">*</div>
-                <input type="text" class="asterisk form-control" id="phone" required>
-            </div>
-         </div> -->
+          </div>
           </div>
          <hr />
+         <div>
+         	<h4>Standard</h4>
+         <div class="installation form-group">
+            <label class="hosting-notes" for="standard"><b>Notes</b></label>
+          </div>
+            <hr />
+         <h4>Patches</h4>
+         <div class="installation form-group">
+            <label class="hosting-notes" for="patches"><b>Patches</b></label>
+          </div>
+         </div>
+            <hr />
+         <div>
+         	<h4>Notes</h4>
+         <div class="installation form-group">
+          </div>
+         </div>
+            <hr />
          <h4>Attachments</h4>
-         <div class="attachments-div"><p class="attachments"><b>Attachments</b></p>
-            	<input type="file">	
+         <div class="attachments-div"><p class="attachments"><b>Attachments</b></p>	
             </div>
          <div class="buttons">
-         	<button type="cancel" class="cancel btn btn-primary">Cancel</button>
-        	<button type="submit" class="submit btn btn-primary">Submit</button>
+         	<button type="cancel" class="cancel btn btn-primary" (click)="cancelButton()">Cancel</button>
+         	<button type="submit" class="cancel btn btn-primary" *ngIf="!editSolution.disabled">Submit</button>
         </div>
 </form>
