--- a/src/app/policy-view-component/policy-view-forms-component/review/review.component.html
+++ b/src/app/policy-view-component/policy-view-forms-component/review/review.component.html
@@ -3,6 +3,42 @@
 				<div class="policy-edit"><fa class="edit-icon icons" data-toggle="tooltip" data-placement="right" title="Save" data-animation="true" data-delay="0" [name]="'edit'"></fa></div>
 			<hr />
 			</div>
+<ng-template #content let-c="close" let-d="dismiss">
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">ADDING POLICY REVIEWR(S)/h4>
+    <!-- <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button> -->
+  </div>
+  <hr />
+  <div class="modal-body">
+    <form>
+      	<div class="form-row">
+            <div class="form-group col-12">
+                <label for="vendorName"><b>Search User</b></label>
+                <div class="asterisk">*</div>
+                <input type="text" class="form-control" id="vendorName" placeholder="Search Users" formControlName="name">
+            </div>
+            <div class="form-group col-12">
+            	<label for="dueDate"><b>Renewal Due Date</b></label>
+                <my-date-picker name="myname"></my-date-picker>
+            </div>
+        <!-- <label for="dateOfBirth">Date of birth</label>
+        <div class="input-group">
+          <input id="dateOfBirth" class="form-control" placeholder="yyyy-mm-dd" name="dp" ngbDatepicker #dp="ngbDatepicker">
+          <div class="input-group-append">
+            <button class="btn btn-outline-secondary" (click)="dp.toggle()" type="button">
+              <img src="img/calendar-icon.svg" style="width: 1.2rem; height: 1rem; cursor: pointer;"/>
+            </button>
+          </div>
+        </div> -->
+      </div>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="c('Save click')">Save</button>
+  </div>
+</ng-template>
 <table class="table table-bordered table-dark">
 	<thead>
 		    <tr>
