--- a/src/app/locality-component/locality-tab/locality-tab.component.html
+++ b/src/app/locality-component/locality-tab/locality-tab.component.html
@@ -2,10 +2,10 @@
     <div class="head">
         <ul class="nav nav-tabs">
             <li class="nav-item">
-                <a class="nav-link disabled">Information </a>
+                <a class="nav-link" routerLink="/locality/option">Information </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link hover" routerLink="/locality/option">Solutions</a>
+                <a class="nav-link hover" routerLink="/locality/option/solutions">Solutions</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link " routerLink="/locality/option/business">Business</a>
