--- a/src/app/policy-view-component/policy-view-forms-component/review/review.component.html
+++ b/src/app/policy-view-component/policy-view-forms-component/review/review.component.html
@@ -5,10 +5,8 @@
 			</div>
 <ng-template #content let-c="close" let-d="dismiss">
   <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">ADDING POLICY REVIEWR(S)/h4>
-    <!-- <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
-      <span aria-hidden="true">&times;</span>
-    </button> -->
+    <h4 class="modal-title" id="modal-basic-title">ADDING POLICY REVIEWR(S)</h4>
+   
   </div>
   <hr />
   <div class="modal-body">
@@ -23,15 +21,7 @@
             	<label for="dueDate"><b>Renewal Due Date</b></label>
                 <my-date-picker name="myname"></my-date-picker>
             </div>
-        <!-- <label for="dateOfBirth">Date of birth</label>
-        <div class="input-group">
-          <input id="dateOfBirth" class="form-control" placeholder="yyyy-mm-dd" name="dp" ngbDatepicker #dp="ngbDatepicker">
-          <div class="input-group-append">
-            <button class="btn btn-outline-secondary" (click)="dp.toggle()" type="button">
-              <img src="img/calendar-icon.svg" style="width: 1.2rem; height: 1rem; cursor: pointer;"/>
-            </button>
-          </div>
-        </div> -->
+       
       </div>
     </form>
   </div>
