--- a/src/app/edit-navigation/edit-navigation.component.html
+++ b/src/app/edit-navigation/edit-navigation.component.html
@@ -9,7 +9,7 @@
                 	<a href="javascript:void(0)" (click)="backClicked()"><fa class="left-icons left-icon icons" data-toggle="tooltip" data-placement="right" title="Back" data-animation="true" data-delay="0" [name]="'arrow-left'"></fa></a>
                 </div>
                 <div class="save-edit">
-                	<fa class="edit-icon icons" data-toggle="tooltip" data-placement="right" title="Save" data-animation="true" data-delay="0" [name]="'edit'"></fa>
+                	<fa class="edit-icon icons"   data-toggle="tooltip" data-placement="right" title="Save" data-animation="true" data-delay="0" [name]="'edit'" (click)="editClick.emit(true)"></fa>
                 </div>
                 <!-- <fa class="edit-icon icons" [name]="'edit'"></fa> -->
             </div>
