--- a/src/app/locality-component/locality-tab/locality-tab.component.html
+++ b/src/app/locality-component/locality-tab/locality-tab.component.html
@@ -2,13 +2,13 @@
     <div class="head">
         <ul class="nav nav-tabs">
             <li class="nav-item">
-                <a class="nav-link" routerLink="/locality/option">Information </a>
+                <a class="nav-link" routerLink="/locality/option"> <i class="fa fa-info-circle"></i>Information </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link hover" routerLink="/locality/option/solutions">Solutions</a>
+                <a class="nav-link hover" routerLink="/locality/option/solutions"><i class="fa fa-info-circle"></i>Solutions</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " routerLink="/locality/option/business">Business</a>
+                <a class="nav-link " routerLink="/locality/option/business"><i class="fa fa-building-o"></i>Business</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link " routerLink="/locality/option/form2">Assessment</a>
