--- a/src/app/edit-navigation/edit-navigation.component.html
+++ b/src/app/edit-navigation/edit-navigation.component.html
@@ -11,6 +11,12 @@
                 <div class="save-edit">
                 	<fa class="edit-icon icons"   data-toggle="tooltip" data-placement="right" title="Save" data-animation="true" data-delay="0" [name]="'edit'" (click)="editClick.emit(true)"></fa>
                 </div>
+                <div class="save-times">
+                	<fa class="times-icon icons"   data-toggle="tooltip" data-placement="right" title="Save" data-animation="true" data-delay="0" [name]="'times'" ></fa>
+                </div>
+                <div class="save-edit">
+                	<fa class="save-icon icons" data-toggle="tooltip" data-placement="right" title="Save" data-animation="true" data-delay="0" [name]="'save'"></fa>
+                </div>
                 <!-- <fa class="edit-icon icons" [name]="'edit'"></fa> -->
             </div>
             
