--- a/src/app/edit-vendor/edit-vendor.component.html
+++ b/src/app/edit-vendor/edit-vendor.component.html
@@ -7,7 +7,7 @@
   </button>
 </div>
 <div class="modal-body">
-  <p>Vendor Registered {{name}}!</p>
+  <p>The record has been successfully updated{{name}}!</p>
 </div>
 <div class="modal-footer">
   <button type="button" class="btn btn-outline-dark" (click)="c()">Close</button>
@@ -52,15 +52,15 @@
                 <div class="form-group col-md-6">
                     <label for="email">Email ID</label>
                     <div class="asterisk">*</div>
-                    <input type="email" class="form-control" id="email" placeholder="Email ID" formControlName="emailId">
+                    <input type="text" class="form-control"  id="email"  placeholder="Enter your email" formControlName="emailId">
                 </div>
                 <div class="form-group col-md-6">
                     <label for="phone">Phone Number</label>
                     <div class="asterisk">*</div>
-                    <input type="text" class="form-control" id="phone" placeholder="Phone Number" formControlName="phoneNumber">
+                    <input type="text" class="form-control" id="phone"  pattern='[\+]\d{2}[\(]\d{2}[\)]\d{4}[\-]\d{4}' title='Phone Number (Format: +1(999)-999-9999)' formControlName="phoneNumber">
                 </div>
-            </div>
-        </div>
+            </div> 
+        </div> 
         <hr />
         <div formGroupName="vendorAddress" >
             <p><b>Address</b></p>
@@ -76,7 +76,62 @@
                 <div class="form-group col-md-6">
                     <label for="inputState">State</label>
                     <div class="asterisk">*</div>
-                    <input type="text" class="form-control" id="inputState" placeholder="City" formControlName="state">
+                    <select id="inputState" class="form-control">
+            <option selected>Choose...</option>
+            <option value="AL">AL</option>
+	<option value="AK">AK</option>
+	<option value="AR">AR</option>	
+	<option value="AZ">AZ</option>
+	<option value="CA">CA</option>
+	<option value="CO">CO</option>
+	<option value="CT">CT</option>
+	<option value="DC">DC</option>
+	<option value="DE">DE</option>
+	<option value="FL">FL</option>
+	<option value="GA">GA</option>
+	<option value="HI">HI</option>
+	<option value="IA">IA</option>	
+	<option value="ID">ID</option>
+	<option value="IL">IL</option>
+	<option value="IN">IN</option>
+	<option value="KS">KS</option>
+	<option value="KY">KY</option>
+	<option value="LA">LA</option>
+	<option value="MA">MA</option>
+	<option value="MD">MD</option>
+	<option value="ME">ME</option>
+	<option value="MI">MI</option>
+	<option value="MN">MN</option>
+	<option value="MO">MO</option>	
+	<option value="MS">MS</option>
+	<option value="MT">MT</option>
+	<option value="NC">NC</option>	
+	<option value="NE">NE</option>
+	<option value="NH">NH</option>
+	<option value="NJ">NJ</option>
+	<option value="NM">NM</option>			
+	<option value="NV">NV</option>
+	<option value="NY">NY</option>
+	<option value="ND">ND</option>
+	<option value="OH">OH</option>
+	<option value="OK">OK</option>
+	<option value="OR">OR</option>
+	<option value="PA">PA</option>
+	<option value="RI">RI</option>
+	<option value="SC">SC</option>
+	<option value="SD">SD</option>
+	<option value="TN">TN</option>
+	<option value="TX">TX</option>
+	<option value="UT">UT</option>
+	<option value="VT">VT</option>
+	<option value="VA">VA</option>
+	<option value="WA">WA</option>
+	<option value="WI">WI</option>	
+	<option value="WV">WV</option>
+	<option value="WY">WY</option>
+            
+            <option>...</option>
+          </select>
                 </div>
                 <div class="form-group col-md-6">
                     <label for="inputZip">Zip Code</label>
@@ -86,8 +141,10 @@
             </div>
         </div>
         <div class="buttons">
+          <button (click)="open(content)" [disabled]="editVendorForm.invalid" type="submit" class="btn btn-primary"  *ngIf="!editVendorForm.disabled">Submit</button>
             <button type="cancel" class="btn btn-primary"(click)="cancelButton()">Cancel</button>
-            <button (click)="open(content)"  type="submit" class="btn btn-primary"  *ngIf="!editVendorForm.disabled">Submit</button>
+             
+         
 
         </div>
     </form>
