--- a/src/app/locality-component/locality-tab/locality-details/locality-details.component.html
+++ b/src/app/locality-component/locality-tab/locality-details/locality-details.component.html
@@ -4,16 +4,13 @@
         <div class="form-row">
             <div class="form-group col-md-6">
 
-                <label for="inputState">Country/City</label>
+                <label for="inputState">Acronym</label>
                 <div class="asterisk">*</div>
-                <select id="inputState" class="form-control">
-            <option selected>Choose...</option>
-            <option>...</option>
-          </select>
+               <input type="text" class="form-control" id="lastName" value="Value">
             </div>
             <div class="form-group col-md-6">
-                <label for="lastName">Fax</label>
-                <div class="asterisk">*</div>
+                <label for="lastName">Last updated by</label>
+                
                 <input type="text" class="form-control" id="lastName" value="Value">
             </div>
         </div>
@@ -21,39 +18,23 @@
 
 
         <div class="form-row">
-
-            <div class="form-group col-md-6">
-                <label for="lastName">Website Address</label>
+             <div class="form-group col-md-6">
+                <label for="lastName">Name</label>
                 <div class="asterisk">*</div>
                 <input type="text" class="form-control" id="lastName" value="Value">
             </div>
             <div class="form-group col-md-6">
-                <label for="email">Email ID</label>
-                <div class="asterisk">*</div>
-                <input type="email" class="form-control" id="email" value="Value">
+                <label for="email">Updated at</label>
+                    <input type="email" class="form-control" id="email" value="Value">
             </div>
         </div>
+        
+    
+        
         <div class="form-row">
             <div class="form-group col-md-6">
-                <label for="phone">Phone Number</label>
-                <div class="asterisk">*</div>
-                <input type="text" class="form-control" id="phone" value="Value">
-            </div>
-        </div>
-        <hr />
-        <p><b>Address</b></p>
-        <div class="form-group">
-            <label for="inputAddress">Street Name</label>
-            <div class="asterisk">*</div>
-            <input type="text" class="form-control" id="inputAddress" value="Value">
-            <label for="city">City</label>
-            <div class="asterisk">*</div>
-            <input type="text" class="form-control" id="city" value="Value">
-        </div>
-        <div class="form-row">
-            <div class="form-group col-md-6">
-                <label for="inputState">State</label>
-                <div class="asterisk">*</div>
+                <label for="inputState">Division</label>
+               
                 <select id="inputState" class="form-control">
             <option selected>Choose...</option>
             <option>...</option>
@@ -61,8 +42,12 @@
             </div>
             <div class="form-group col-md-6">
                 <label for="inputZip">Zip Code</label>
-                <div class="asterisk">*</div>
-                <input type="text" class="form-control" id="inputZip" valu="00000">
+              
+               
+                <select id="inputState" class="form-control">
+            <option selected>Choose...</option>
+            <option>...</option>
+          </select>
 
                 <div class="buttons">
                     <button type="submit" class="btn btn-primary">Submit</button>
