--- a/src/app/edit-vendor/edit-vendor.component.html
+++ b/src/app/edit-vendor/edit-vendor.component.html
@@ -13,7 +13,7 @@
   <button type="button" class="btn btn-outline-dark" (click)="c()">Close</button>
 </div>
 </ng-template>
-<app-edit-navigation (editClick)="editClicked($event)"></app-edit-navigation>
+<app-edit-navigation (editClick)="editClicked($event)" (cancelClick)="cancelButton()"></app-edit-navigation>
 <div class="form-div" >
     <form  class="forms" [formGroup]="editVendorForm" (ngSubmit)="createVendor(editVendorForm.value)">
         <div class="page-description">
@@ -52,12 +52,12 @@
                 <div class="form-group col-md-6">
                     <label for="email">Email ID</label>
                     <div class="asterisk">*</div>
-                    <input type="text" class="form-control"  id="email"  placeholder="Enter your email" formControlName="emailId">
+                    <input type="text" class="form-control"  id="email"  title='Email Id (Format: @example.com)' placeholder="Enter your email" formControlName="emailId">
                 </div>
                 <div class="form-group col-md-6">
                     <label for="phone">Phone Number</label>
                     <div class="asterisk">*</div>
-                    <input type="text" class="form-control" id="phone"  pattern='[\+]\d{2}[\(]\d{2}[\)]\d{4}[\-]\d{4}' title='Phone Number (Format: +1(999)-999-9999)' formControlName="phoneNumber">
+                    <input type="tel" class="form-control"  id="phonenum"  pattern="^\d{3}-\d{3}-\d{4}$" required title='Phone Number (Format: 999-999-9999)' formControlName="phoneNumber">
                 </div>
             </div> 
         </div> 
@@ -136,13 +136,13 @@
                 <div class="form-group col-md-6">
                     <label for="inputZip">Zip Code</label>
                     <div class="asterisk">*</div>
-                    <input type="text" class="form-control" id="inputZip" formControlName="zipcode">
+                    <input type="text" class="form-control"  pattern="[0-9]{5}" title='Zip Code (Format: 00000)'  id="inputZip" formControlName="zipcode">
                 </div>
             </div>
         </div>
         <div class="buttons">
           <button (click)="open(content)" [disabled]="editVendorForm.invalid" type="submit" class="btn btn-primary"  *ngIf="!editVendorForm.disabled">Submit</button>
-            <button type="cancel" class="btn btn-primary"(click)="cancelButton()">Cancel</button>
+            <button type="cancel" class="btn btn-primary"(click)="cancelButton()" >Cancel</button>
              
          
 
