--- a/src/app/locality-component/locality-tab/locality-tab.component.html
+++ b/src/app/locality-component/locality-tab/locality-tab.component.html
@@ -11,13 +11,20 @@
                 <a class="nav-link " routerLink="/locality/option/business"><i class="fa fa-building-o"></i>Business</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link " routerLink="/locality/option/Audit"><i class="fa fa-bell"></i>Audit/Compliance</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link " routerLink="/locality/option/form2">Assessment</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link " routerLink="/locality/option/form2">Audit</a>
-            </li>
+            
             <li class="nav-item">
                 <a class="nav-link " routerLink="/locality/option/form2">Security</a>
+            </li>
+             <li class="nav-item">
+                <a class="nav-link " routerLink="/locality/option/form2">Technical</a>
+            </li>
+             <li class="nav-item">
+                <a class="nav-link " routerLink="/locality/option/form2">Legal</a>
             </li>
         </ul>
     </div>
