--- a/src/app/locality-component/locality-add-component/locality-add-component.component.html
+++ b/src/app/locality-component/locality-add-component/locality-add-component.component.html
@@ -8,15 +8,16 @@
 
             <label class="label" for="modelSolution"><b>Locality </b></label>
             <div class="asterisk">*</div>
-            <select class="form-control" id="modelSolution" (change)="selectLocality($event.target.value)">
+            <select class="form-control" id="modelSolution" (change)="selectLocal($event.target.value)">
           <option selected>Choose...</option>
-          <option value="locality1">locality1</option>
+          <option value="locality1">Rockingham</option>
           <option value="locality2">locality2</option>
           <option value="locality3">locality3</option>
         </select>
         </div>
 
     </div>
+    <iframe src="https://makeaclickablemap.com/map.php?e4eee16582645ece4e434d3f64e7293a231b573f" frameborder="0" scrolling="no" height="720" width="100%"></iframe>
 
 </form>
 
